// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CnCCommonTemplate Page should render correctly 1`] = `
<Fragment>
  <Styled(View)>
    <Connect(CouponContainer)
      isCheckout={true}
    />
  </Styled(View)>
  <View>
    <Connect(OrderLedgerContainer) />
  </View>
  <Styled(View)>
    <Connect(BonusPointsDays) />
  </Styled(View)>
  <Styled(View)>
    <Styled(TouchableOpacity)
      onPress={[MockFunction]}
    >
      <Styled(BodyCopy)
        accessibilityText=""
        color="white"
        dataLocator=""
        fontFamily="secondary"
        fontSize="fs13"
        fontWeight="extrabold"
        margin={null}
        numberOfLines={null}
        text="Shipping"
        textDecoration={null}
      />
    </Styled(TouchableOpacity)>
  </Styled(View)>
</Fragment>
`;

exports[`CnCCommonTemplate Page should render correctly if on confirmation page 1`] = `
<Fragment>
  <View>
    <Connect(OrderLedgerContainer)
      isConfirmationPage={true}
      showAccordian={true}
    />
    <Styled(View)>
      <Styled(Styled(BodyCopy))
        accessibilityText=""
        dataLocator=""
        fontSize="fs16"
        margin={null}
        mobileFontFamily="secondary"
        numberOfLines={null}
        spacingStyles="margin-top-LRG margin-bottom-LRG"
        text="LOYALTY BANNER"
        textAlign="center"
        textDecoration={null}
      />
    </Styled(View)>
    <Styled(View)>
      <Styled(Styled(BodyCopy))
        accessibilityText=""
        dataLocator=""
        fontSize="fs16"
        margin={null}
        mobileFontFamily="secondary"
        numberOfLines={null}
        spacingStyles="margin-top-LRG margin-bottom-LRG"
        text="ACCOUNT FORM"
        textAlign="center"
        textDecoration={null}
      />
    </Styled(View)>
    <Styled(View)>
      <Styled(Styled(BodyCopy))
        accessibilityText=""
        dataLocator=""
        fontSize="fs16"
        margin={null}
        mobileFontFamily="secondary"
        numberOfLines={null}
        spacingStyles="margin-top-LRG margin-bottom-LRG"
        text="COUPONS"
        textAlign="center"
        textDecoration={null}
      />
    </Styled(View)>
    <Styled(View)>
      <Styled(Styled(BodyCopy))
        accessibilityText=""
        dataLocator=""
        fontSize="fs16"
        margin={null}
        mobileFontFamily="secondary"
        numberOfLines={null}
        spacingStyles="margin-top-LRG margin-bottom-LRG"
        text="COUPONS"
        textAlign="center"
        textDecoration={null}
      />
    </Styled(View)>
  </View>
</Fragment>
`;
